--- a/Adobe/adobe.css
+++ b/Adobe/adobe.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -163,81 +164,144 @@ video{
     display: flex;
     margin-top: 15px;
 }
-.carousel {
-    background: black;
-  }
+.fifth_container{
   
-  .carousel-cell {
-    width: 70%;
-    height: 200px;
-    /* flex-box, center image in cell */
-    display: -webkit-box;
-    display: -webkit-flex;
-    display:         flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-            justify-content: center;
-    -webkit-align-items: center;
-            align-items: center;
-  }
-  
-  .carousel-cell img {
-    display: block;
+}
+img {
     max-width: 100%;
-    max-height: 100%;
-    /* dim unselected */
-    opacity: 0.7;
-    -webkit-transform: scale(0.85);
-            transform: scale(0.85);
-    -webkit-filter: blur(5px);
-            filter: blur(5px);
-    -webkit-transition: opacity 0.3s, -webkit-transform 0.3s, transform 0.3s, -webkit-filter 0.3s, filter 0.3s;
-            transition: opacity 0.3s, transform 0.3s, filter 0.3s;
+    vertical-align: middle;
   }
   
-  /* brighten selected image */
-  .carousel-cell.is-selected img {
-    opacity: 1;
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-filter: none;
-            filter: none;
-  }
-  
-  @media screen and ( min-width: 768px ) {
-    .carousel-cell {
-      height: 400px;
-    }
-  }
-  
-  @media screen and ( min-width: 960px ) {
-    .carousel-cell {
-      width: 60%;
-    }
-  }
-  
-  /* buttons, no circle */
-  .flickity-prev-next-button {
-    width: 60px;
-    height: 60px;
-    background: transparent;
-    opacity: 0.6;
-  }
-  .flickity-prev-next-button:hover {
-    background: transparent;
-    opacity: 1;
-  }
-  /* arrow color */
-  .flickity-prev-next-button .arrow {
-    fill: white;
-  }
-  .flickity-prev-next-button.no-svg {
-    color: white;
-  }
-  /* closer to edge */
-  .flickity-prev-next-button.previous { left: 0; }
-  .flickity-prev-next-button.next { right: 0; }
-  /* hide disabled button */
-  .flickity-prev-next-button:disabled {
+  .trigger {
     display: none;
+  }
+  
+  .slider, .slider-wrapper {
+      margin-top: 20px;
+    position: relative;
+    height: 350px;
+  }
+  
+  .slide {
+    width: 100%;
+    overflow: hidden;
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 5000;
+    opacity: 0;
+    transition: opacity .5s ease-in-out;
+  }
+  
+  .slide-img {
+    filter: brightness(50%);
+    height: 100%;
+    object-fit: fill;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  .slide-figure {
+    height: 100%;
+    position: relative;
+    margin: 0;
+  }
+  
+  .slide-caption {
+    position: absolute;
+    bottom: 30%;
+    width: calc(100% - 1rem);
+    color: white;
+    text-align: center;
+    left: 50%;
+  }
+  
+  .trigger:checked + .slide {
+    z-index: 6000;
+    opacity: 1;
+  }
+  
+  .slider-nav {
+    width: 100%;
+    text-align: center;
+    margin: 1rem 0;
+  }
+  
+  .slider-nav__item {
+    display: inline-block;
+  }
+  
+  .slider-nav__label {
+    font-size: 13px;
+    background-color: #333;
+    display: block;
+    height: 2em;
+    line-height: 2em;
+    width: 2em;
+    text-align: center;
+    border-radius: 50%;
+    color: white;
+    cursor: pointer;
+    transition: background-color .25s, color .25s ease-in-out;
+  }
+  
+  .slider-nav__label:hover,
+  .slider-nav__label:active,
+  .slider-nav__label:focus {
+    background-color: gray;
+    color: black;
+  }
+  .seventh_container{
+      margin-top: 30px;
+  }
+  .grid_items{
+
+  }
+  .first{
+    display: grid;
+    grid-template-rows: 300px 300px;
+    grid-template-columns: 200px 200px 200px 200px ;
+    margin-top: 20px;
+    margin-left: 20px;
+    gap: 20px;
+  }
+  .footer{
+      color: #fff;
+      background-color: #000;
+      margin-top: 100px;
+      padding: 20px;
+      display: grid;
+      grid-template-rows: 80px;
+      grid-template-columns: 200px 200px;
+      gap: 350px;
+  }
+  .footer .box_1{
+      display: flex;
+      margin-top: 20px;
+  }
+  .footer .box_2{
+      display: flex;
+      margin-top: 20px;
+      margin-left: 50px;
+  }
+  .footer .box_2 p{
+      font-size: small;
+      margin-left: 40px;
+  }
+  a{
+      height: 10px;
+      width: 10px;
+      background-color: #000;
+      box-shadow: 1px 4px 2px 2px grey;
+      margin-left: 30px;
+  }
+  .icons{
+      border-radius: 50%;
+      color: #fff;
+      margin-left: 25px;
+      margin-top: 7px;
+  }
+  a i{
+transform: all 0.3s;
   }
